<resources>
    <string name="app_name">Blood Line</string>
    <string name="verify">Verify</string>
    <string name="Finish">Finish</string>
    <string name="contentDescription">TODO</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>

    <string-array name="blood_group">
        <item>Blood Group</item>
        <item>O+</item>
        <item>AB+</item>
        <item>A+</item>
        <item>B+</item>
        <item>O-</item>
        <item>AB-</item>
        <item>A-</item>
        <item>B-</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="campaign">Campaign</string>
    <string name="report">Report</string>
    <string name="assistant">Assistant</string>
    <string name="order_bloods">Order Bloods</string>
    <string name="donates">Donates</string>
    <string name="find_donors">Find Donors</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="register">Register</string>
    <string name="user_information">User Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="first_one">First ONE</string>
    <string name="workig">Workig</string>
    <string name="blood">Blood</string>
    <string name="S_static">Static</string>
    <string name="blood_navigation">Blood Navigation</string>
    <string name="static_navigation">Static Navigation</string>
    <string name="open" />
    <string name="close" />
    <string name="blood_line">Blood Line</string>
    <string name="you_can_donate_for_ones_in_need_and_request_blood_if_you_need">You can donate for ones in need and request blood if you need.</string>
    <string name="login">Login</string>
    <string name="request_bloods">Request bloods</string>
    <string name="chat">Chat</string>
    <string name="reseach_center">Reseach Center</string>
    <string name="rajshahi_medical_college_rajshahi">Rajshahi Medical College, Rajshahi.</string>
    <string name="_6_mmol_l">6 mmol/L</string>
    <string name="glucose">Glucose</string>
    <string name="_6_2_mmol_l">6.2 mmol/L</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="_12_mmol_l">12 mmol/L</string>
    <string name="bilir_ubin">Bilir Ubin</string>
    <string name="enter_email">Enter Email</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="choose_image">Choose image</string>
    <string name="update_information">Update Information</string>
    <string name="note">Note</string>
    <string name="patient_name">patient name</string>
    <string name="ambulance">Ambulance</string>
    <string name="apply">Apply</string>
    <string name="md_sabbir_roshid_shohan">Md Sabbir Roshid Shohan</string>
    <string name="rajshahi">Rajshahi</string>
    <string name="rbc">RBC</string>
    <string name="mcv">MCV</string>
    <string name="platelets">Platelets</string>
    <string name="ambulance_name">Ambulance Name</string>
    <string name="n_a">N/A</string>
    <string name="donate">Donate</string>
    <string name="hospital">Hospital</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string-array name="gender">
        <item />
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>