<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home_nav_bar"
        android:icon="@drawable/home_icon_navigation"

        android:title="@string/home" />
    <item android:id="@+id/search_nav_bar"
        android:title="@string/search"
        android:icon="@drawable/search_icon_navigation" />
    <item android:id="@+id/blood_nav_bar"
        android:title="" />
<!--        android:title="@string/blood"-->
<!--        android:icon="@drawable/blood_icon_navigation"-->

    <item android:id="@+id/static_nav_bar"
        android:title="@string/chat"
        android:icon="@drawable/chat_icon"
        />
    <item android:id="@+id/profile_nav_bar"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon_navigation" />
</menu>