<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="10dp"
    android:focusable="true"


    >

    <!-- Age,Blood_Group,Email,Location,Name,Phone-->
    <!--   Name location Blood Group -->

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/name_search_frag_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"


            android:paddingStart="10dp"
            android:text="@string/name"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap,RtlSymmetry"
            app:drawableStartCompat="@drawable/name_icon_register">


        </TextView>

        <TextView
            android:id="@+id/location_search_frag_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_search_frag_request"
            android:layout_marginTop="20sp"
            android:paddingStart="10dp"

            android:text="@string/location"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/location_icon_register"
            tools:ignore="RtlSymmetry">


        </TextView>

        <TextView
            android:id="@+id/phone_search_frag_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_search_frag_request"
            android:layout_marginTop="20sp"
            android:paddingStart="10dp"

            android:text="@string/phone"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/location_icon_register"
            tools:ignore="RtlSymmetry">


        </TextView>

        <TextView
            android:id="@+id/note_search_frag_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_search_frag_request"
            android:layout_marginTop="30sp"
            android:paddingStart="10dp"

            android:text="@string/note"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/note"
            tools:ignore="RtlSymmetry">


        </TextView>


        <ImageView
            android:layout_width="75dp"
            android:layout_height="67dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="16dp"
            android:paddingStart="30sp"
            android:src="@drawable/blood_blank"
            tools:ignore="RtlSymmetry">


        </ImageView>

        <TextView
            android:id="@+id/blood_group_search_frag_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"



            android:layout_alignParentEnd="true"

            android:layout_marginTop="50dp"
            android:paddingEnd="19sp"
            android:text="@string/n_a"
            tools:ignore="RtlSymmetry">


        </TextView>
        <TextView
            android:text="@string/donate"
            android:paddingEnd="20dp"
            android:textSize="20sp"
            android:textColor="@color/custom"
            android:layout_marginTop="50dp"
            android:layout_below="@id/blood_group_search_frag_request"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry">



        </TextView>




    </RelativeLayout>

</androidx.cardview.widget.CardView>