<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="10dp"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/search_ambulance_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:hint="@string/ambulance_name"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/search_ambulance_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/search_ambulance_name"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:hint="@string/phone"
            tools:ignore="RtlSymmetry"
            app:drawableStartCompat="@drawable/phone_icon_register" />

        <TextView
            android:id="@+id/search_ambulance_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/search_ambulance_phone"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:hint="@string/location"
            tools:ignore="RtlSymmetry"
            app:drawableStartCompat="@drawable/location_icon_register" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>