<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Request_Blood_Cardview"
    tools:ignore="ScrollViewCount">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >



        <!--        name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/location"
            android:paddingStart="25sp"
            app:boxStrokeColor="#2196F3"
            app:boxStrokeErrorColor="@color/red"
            app:hintTextColor="#2196F3"
            app:errorTextColor="@color/red"


            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:startIconTint="@color/custom"
            app:startIconDrawable="@drawable/profile_icon_navigation"
            tools:ignore="MissingConstraints,RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_request_blood"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress"


                tools:ignore="MissingConstraints" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textinput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/a1"
            android:layout_marginTop="18dp"
            android:hint="Hospital"
            android:paddingStart="25sp"
            app:boxStrokeColor="#2196F3"
            app:boxStrokeErrorColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="30"


            app:endIconMode="clear_text"
            app:errorTextColor="@color/red"
            app:hintTextColor="#2196F3"
            app:startIconTint="@color/custom"
            app:startIconDrawable="@drawable/hospital"
            tools:ignore="MissingConstraints,RtlSymmetry,UnknownId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hospital_request_blood"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress"


                tools:ignore="MissingConstraints" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        blood group-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_textinput"
            android:layout_marginTop="18sp"
            android:hint="Blood Group"
            android:paddingStart="25sp"
            app:boxStrokeColor="#2196F3"
            app:boxStrokeErrorColor="@color/red"
            app:errorTextColor="@color/red"
            app:hintTextColor="#2196F3"
            app:startIconTint="@color/custom"
            app:startIconDrawable="@drawable/blood_grpup_icon_register"
            tools:ignore="MissingConstraints,RtlSymmetry">

            <AutoCompleteTextView
                android:id="@+id/register_blood_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_textinput"
                android:inputType="none"
                android:textColorHint="#757575"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--        phone-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/a6"
            android:layout_marginTop="18dp"
            android:hint="@string/phone"
            android:paddingStart="25sp"
            app:boxStrokeColor="#2196F3"
            app:boxStrokeErrorColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="30"


            app:endIconMode="clear_text"
            app:errorTextColor="@color/red"
            app:hintTextColor="#2196F3"
            app:startIconTint="@color/custom"
            app:startIconDrawable="@drawable/phone_icon_register"
            tools:ignore="MissingConstraints,RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_request_blood"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress"


                tools:ignore="MissingConstraints" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        add a note -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/a8"
            android:layout_marginTop="18dp"
            android:hint="@string/note"
            android:paddingStart="25sp"
            app:boxStrokeColor="#2196F3"
            app:boxStrokeErrorColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="30"


            app:endIconMode="clear_text"
            app:errorTextColor="@color/red"
            app:hintTextColor="#2196F3"
            app:startIconTint="@color/custom"
            app:startIconDrawable="@drawable/note"
            tools:ignore="MissingConstraints,RtlSymmetry,UnknownId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_a_note_request_blood"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress"


                tools:ignore="MissingConstraints" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/request_button_qequest_blood"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/a9"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/custom_button"
            android:text="@string/register"
            android:textColor="@color/white">

        </Button>
















    </RelativeLayout>

</ScrollView>